--- a/manifest.json
+++ b/manifest.json
@@ -1,295 +1,295 @@
 {
     "repos": {
         "enterprise_zenpacks/ZenPacks.zenoss.JBossMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.JBossMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.JBossMonitor",
             "ref": "2.4.2"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.PythonCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.PythonCollector", 
+            "repo": "zenoss/ZenPacks.zenoss.PythonCollector",
             "ref": "1.6.4"
-        }, 
+        },
         "zep": {
-            "repo": "zenoss/zenoss-zep", 
+            "repo": "zenoss/zenoss-zep",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenSQLTx": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenSQLTx", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenSQLTx",
             "ref": "2.6.1"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.AdvancedSearch": {
-            "repo": "zenoss/ZenPacks.zenoss.AdvancedSearch", 
-            "ref": "1.1.5"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.AdvancedSearch",
+            "ref": "support/5.0.x"
+        },
         "golang/src/github.com/zenoss/zminion": {
-            "repo": "git@github.com:zenoss/zminion", 
-            "ref": "support/5.0.x", 
+            "repo": "git@github.com:zenoss/zminion",
+            "ref": "support/5.0.x",
             "name": "golang/src/github.com/zenoss/zminion"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.BrocadeMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.BrocadeMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.BrocadeMonitor",
             "ref": "2.1.1"
-        }, 
+        },
         "golang/src/github.com/zenoss/metricshipper": {
-            "repo": "zenoss/metricshipper", 
+            "repo": "zenoss/metricshipper",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.BigIpMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.BigIpMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.BigIpMonitor",
             "ref": "2.6.4"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseSkin": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSkin", 
-            "ref": "3.3.2"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSkin",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.TomcatMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.TomcatMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.TomcatMonitor",
             "ref": "2.3.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.NortelMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.NortelMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.NortelMonitor",
             "ref": "2.0.2"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.AuditLog": {
-            "repo": "zenoss/ZenPacks.zenoss.AuditLog", 
-            "ref": "1.3.0"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.AuditLog",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.LDAPAuthenticator": {
-            "repo": "zenoss/ZenPacks.zenoss.LDAPAuthenticator", 
-            "ref": "3.1.6"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.LDAPAuthenticator",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor",
             "ref": "5.3.4"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.MultiRealmIP": {
-            "repo": "zenoss/ZenPacks.zenoss.MultiRealmIP", 
+            "repo": "zenoss/ZenPacks.zenoss.MultiRealmIP",
             "ref": "2.1.4"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.Diagram": {
-            "repo": "zenoss/ZenPacks.zenoss.Diagram", 
-            "ref": "1.2.2"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.Diagram",
+            "ref": "support/5.0.x"
+        },
         "zenpacks/ZenPacks.zenoss.Microsoft.Windows": {
-            "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows", 
+            "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows",
             "ref": "2.3.1"
-        }, 
+        },
         "core": {
-            "repo": "zenoss/zenoss-prodbin", 
+            "repo": "zenoss/zenoss-prodbin",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.vSphere": {
-            "repo": "zenoss/ZenPacks.zenoss.vSphere", 
+            "repo": "zenoss/ZenPacks.zenoss.vSphere",
             "ref": "3.1.1"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.vCloud": {
-            "repo": "zenoss/ZenPacks.zenoss.vCloud", 
+            "repo": "zenoss/ZenPacks.zenoss.vCloud",
             "ref": "1.4.9"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCS": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoUCS", 
+            "repo": "zenoss/ZenPacks.zenoss.CiscoUCS",
             "ref": "1.9.2"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.FtpMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.FtpMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.FtpMonitor",
             "ref": "1.1.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseSecurity": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSecurity", 
-            "ref": "1.1.0"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSecurity",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenWebTx": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenWebTx", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenWebTx",
             "ref": "2.9.2"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.ControlCenter": {
-            "repo": "zenoss/ZenPacks.zenoss.ControlCenter", 
-            "ref": "1.0.1"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.ControlCenter",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.DynamicView": {
-            "repo": "zenoss/ZenPacks.zenoss.DynamicView", 
-            "ref": "1.2.1.1"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.DynamicView",
+            "ref": "support/5.0.x"
+        },
         "zenpacks/ZenPacks.zenoss.ApacheMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.ApacheMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.ApacheMonitor",
             "ref": "2.1.4"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.JuniperMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.JuniperMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.JuniperMonitor",
             "ref": "2.1.1"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.WebLogicMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.WebLogicMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.WebLogicMonitor",
             "ref": "2.2.2"
-        }, 
+        },
         "golang/src/github.com/control-center/serviced": {
-            "repo": "control-center/serviced", 
+            "repo": "control-center/serviced",
             "ref": "support/1.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.NetScreenMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.NetScreenMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.NetScreenMonitor",
             "ref": "2.2.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.PropertyMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.PropertyMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.PropertyMonitor",
             "ref": "1.0.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.ZenJMX": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenJMX", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenJMX",
             "ref": "3.11.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.MySqlMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.MySqlMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.MySqlMonitor",
             "ref": "3.0.5"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseLinux": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseLinux", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseLinux",
             "ref": "support/5.0.x"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.HttpMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.HttpMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.HttpMonitor",
             "ref": "2.1.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.LDAPMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.LDAPMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.LDAPMonitor",
             "ref": "1.4.1"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.SolarisMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.SolarisMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.SolarisMonitor",
             "ref": "2.3.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.HpuxMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.HpuxMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.HpuxMonitor",
             "ref": "1.4.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.DigMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.DigMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.DigMonitor",
             "ref": "1.1.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CatalogService": {
-            "repo": "zenoss/ZenPacks.zenoss.CatalogService", 
+            "repo": "zenoss/ZenPacks.zenoss.CatalogService",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.Licensing": {
-            "repo": "zenoss/ZenPacks.zenoss.Licensing", 
-            "ref": "0.1.1"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.Licensing",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseReports": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports", 
-            "ref": "2.3.3"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports",
+            "ref": "support/5.0.x"
+        },
         "service": {
-            "repo": "zenoss/zenoss-service", 
-            "ref": "support/5.0.x", 
+            "repo": "zenoss/zenoss-service",
+            "ref": "support/5.0.x",
             "name": "service"
-        }, 
+        },
         "../build": {
-            "repo": "zenoss/platform-build", 
-            "ref": "support/5.0.x", 
+            "repo": "zenoss/platform-build",
+            "ref": "support/5.0.x",
             "name": "build"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CheckPointMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.CheckPointMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.CheckPointMonitor",
             "ref": "2.0.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.Dashboard": {
-            "repo": "zenoss/ZenPacks.zenoss.Dashboard", 
-            "ref": "1.0.5"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.Dashboard",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.WebsphereMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.WebsphereMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.WebsphereMonitor",
             "ref": "1.2.1"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector", 
-            "ref": "1.6.1"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector",
+            "ref": "support/5.0.x"
+        },
         "protocols": {
-            "repo": "zenoss/zenoss-protocols", 
+            "repo": "zenoss/zenoss-protocols",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.StorageBase": {
-            "repo": "zenoss/ZenPacks.zenoss.StorageBase", 
+            "repo": "zenoss/ZenPacks.zenoss.StorageBase",
             "ref": "1.3.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.NetAppMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.NetAppMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.NetAppMonitor",
             "ref": "3.0.7"
-        }, 
+        },
         "metric-service": {
-            "repo": "zenoss/query", 
+            "repo": "zenoss/query",
             "ref": "support/5.0.x"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.NtpMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.NtpMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.NtpMonitor",
             "ref": "2.2.1"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.WBEM": {
-            "repo": "zenoss/ZenPacks.zenoss.WBEM", 
+            "repo": "zenoss/ZenPacks.zenoss.WBEM",
             "ref": "1.0.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EMC.base": {
-            "repo": "zenoss/ZenPacks.zenoss.EMC.base", 
+            "repo": "zenoss/ZenPacks.zenoss.EMC.base",
             "ref": "1.0.4.1"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
             "ref": "1.3.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenDeviceACL": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL", 
-            "ref": "2.1.1"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL",
+            "ref": "support/5.0.x"
+        },
         "utils": {
-            "repo": "zenoss/zenoss-utils", 
+            "repo": "zenoss/zenoss-utils",
             "ref": "support/5.0.x"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.DnsMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.DnsMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.DnsMonitor",
             "ref": "2.1.0"
-        }, 
+        },
         "zauth-service": {
-            "repo": "zenoss/zauth-service", 
+            "repo": "zenoss/zauth-service",
             "ref": "support/5.0.x"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.DellMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.DellMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.DellMonitor",
             "ref": "2.2.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.DeviceSearch": {
-            "repo": "zenoss/ZenPacks.zenoss.DeviceSearch", 
+            "repo": "zenoss/ZenPacks.zenoss.DeviceSearch",
             "ref": "1.2.0"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenOperatorRole": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenOperatorRole", 
-            "ref": "2.0.2"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.ZenOperatorRole",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.DistributedCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.DistributedCollector", 
-            "ref": "3.0.0"
-        }, 
+            "repo": "zenoss/ZenPacks.zenoss.DistributedCollector",
+            "ref": "support/5.0.x"
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.AixMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.AixMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.AixMonitor",
             "ref": "2.0.0"
-        }, 
+        },
         "zproxy": {
-            "repo": "zenoss/zproxy", 
+            "repo": "zenoss/zproxy",
             "ref": "support/5.0.x"
-        }, 
+        },
         "metric-consumer": {
-            "repo": "zenoss/zenoss.metric.consumer", 
+            "repo": "zenoss/zenoss.metric.consumer",
             "ref": "support/5.0.x"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenMailTx": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenMailTx", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenMailTx",
             "ref": "2.6.0"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.HPMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.HPMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.HPMonitor",
             "ref": "2.1.0"
         },
         "zenpacks/ZenPacks.zenoss.ZenMail": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenMail", 
-            "ref": "5.0.0"
-        } 
+            "repo": "zenoss/ZenPacks.zenoss.ZenMail",
+            "ref": "support/5.0.x"
+        }
     }
 }
